# custom_msgs

custom_msgs_ros1/: CMakeLists.txt  package.xml
custom_msgs_ros1/msg/: DetectionResult.msg  MyBoundingBox3D.msg  MyDetection3D.msg
custom_msgs_ros2/: CMakeLists.txt  package.xml
custom_msgs_ros2/msg/: MyDetection3DArray.msg  PseudoGridMap.msg
