<?xml version="1.0"?>
<package format="2">
  <name>custom_msgs</name>
  <version>0.0.1</version>
  <description>Custom messages for ROS1</description>

  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>

  <!-- Build tool dependency -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies for message generation -->
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>  <!-- ✅ Added this -->
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>message_runtime</exec_depend>  <!-- ✅ Added this -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- ROS libraries required -->
  <depend>roscpp</depend>
  <depend>rospy</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>

